ufw (0.16) UNRELEASED; urgency=low

  * bump version

 -- Jamie Strandboge <jamie@ubuntu.com>  Tue, 11 Mar 2008 16:11:59 -0400

ufw (0.15) hardy; urgency=low

  * fix man page typo
  * debian/control: added Homepage (LP: #199722)
  * fix python version check (upstream #199790)
  * properly handle when ipv6 is not loaded or blacklisted (LP: #199724)
  * man page fixes
  * clarify 'status' output (LP: #199873)
  * fix ipv6 stateless autoconfiguration (upstream #200921)

 -- Jamie Strandboge <jamie@ubuntu.com>  Sat, 08 Mar 2008 07:36:04 -0500

ufw (0.14) hardy; urgency=low

  * conf/initscript
    - move sysctl to after rules load (LP: #192123)
    - don't make sysctl and modprobe failures fatal (LP: #197285)
    - make output less verbose and fix formatting (LP: #198211)
  * debian/rules: update setup.py version with changelog version
  * debian/control
    - update maintainer to Ubuntu Core Developers
    - add Vcs-Bzr url

 -- Jamie Strandboge <jamie@ubuntu.com>  Fri, 15 Feb 2008 08:56:24 -0500

ufw (0.13) hardy; urgency=low

  * added ipv6 and (commented out) forwarding entries in sysctl.conf

 -- Jamie Strandboge <jamie@ubuntu.com>  Wed, 13 Feb 2008 22:31:47 -0500

ufw (0.12) hardy; urgency=low

  * new upstream version:
    - initscript implements 'stop' as default ACCEPT
    - initscript restart and force-reload now use 'stop' and 'start'
  * debian/postinst: stop on runlevels 0, 1 and 6
  * debian/postrm: default ACCEPT on purge
  * debian/README.Debian: provide useful notes

 -- Jamie Strandboge <jamie@ubuntu.com>  Thu, 07 Feb 2008 09:47:10 -0500

ufw (0.11) hardy; urgency=low

  * comply with Ubuntu policy of syncookies off (LP: 189565) 
  * debian/control: Build-Depends on debhelper (>= 5.0.38)

 -- Jamie Strandboge <jamie@ubuntu.com>  Wed, 06 Feb 2008 14:08:36 -0500

ufw (0.10) hardy; urgency=low

  * new upstream version:
    - ipv6 support (LP: 188934)
    - added more tests
    - updated docs
  * updated packaging for ipv6 files